<resources>
    <string name="app_name">ucargo</string>
    <string name="error_generic">There was an error, please try again soon</string>

    <string name="edit_profile_text">EDIT PROFILE</string>
    <string name="edit_profile_phone_number_text">PHONE: </string>
    <string name="ucargo_contact_text">IF YOU WANT TO MAKE A CHANGE OF INFO SEND MAIL TO</string>
    <string name="storage_permission_rationale_title">Storage permission required</string>
    <string name="storage_permition_rationale_message">In order to take a picture, you must grant this permission!</string>
    <string name="storage_permission_denied_message">Storage permission is required in order to take a photo with the camera</string>

    <string name="nav_open" translatable="false">Navigation drawer Opened</string>
    <string name="nav_closed" translatable="false">Navigation drawer Closed</string>
    <string name="order_details_customer_comment">Customer Comment</string>
    <string name="order_assigned_import_step">Your trip is ready. You must start the journey to customs to pick up the merchandise. Click on the lower button to start.</string>
    <string name="clear">Clear</string>
    <string name="send_sign">Send</string>
    <string name="back_button">back</string>
    <string name="begin_route">Begin Route</string>
    <string name="store_merchandise">Store Merchandise</string>
    <string name="report_lock">Report Image Lock</string>
    <string name="collect_merchandise">Collect Merchandise</string>
    <string name="i_am_driver">I am driver</string>
    <string name="i_am_agency">I am custom broker or Cargo Agency</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_cellphone_hint">Cellphone Number</string>
    <string name="pama_button_text">Accept</string>
    <string name="pama_call_button">Call Support</string>
    <string name="begin_route_aduana">BEGIN ROUTE TO CUSTOMS</string>
    <string name="begin_route_or_store">BEGIN ROUTE OR STORE</string>
    <string name="order_detail_arrive_delivery_destination_export">ARRIVAL AT THE CUSTOMS</string>
    <string name="confirm_message">¿Are you sure?</string>
    <string name="accept_message">Accept</string>
    <string name="title_activity_cargocheck">cargocheck</string>
    <string name="picture_lock_string">Picture Of Lock</string>
    <string name="without_incidents">without incidents</string>
    <string name="change_lock_photo">change image Lock</string>
    <string name="continue_trip">Continue Trip</string>
    <string name="with_incidents">With Incidents</string>


</resources>
