<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/labelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#4a4a4a"
        android:letterSpacing="0.01"
        android:gravity="center_horizontal"
        android:text="@string/confirm_message"
        />

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        android:layout_below="@+id/labelTextView"
        android:background="@drawable/ic_sign_in"
        android:text="@string/accept_message"
        android:textColor="@color/loginEditTextColor" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acceptButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/cancel"
        android:textColor="#9b9b9b" />




</RelativeLayout>