<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <ImageView
        android:layout_width="158dp"
        android:layout_height="210dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_box"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="70dp"
        android:textColor="@color/ef_white"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="ARRIBO AL ALMACEN"

        />

    <CheckBox
        android:id="@+id/withoutincidentscheckbox"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:text="@string/without_incidents"
        android:textColor="@color/ef_white"
        android:textStyle="bold"
        android:buttonTint="@color/ef_white"/>


    <CheckBox
        android:id="@+id/withincidentscheckbox"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/with_incidents"
        android:textStyle="bold"
        android:textColor="@color/ef_white"
        android:buttonTint="@color/ef_white"
        />



    <EditText
        android:id="@+id/incidentEdittext"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:background="@color/ef_white"
        android:visibility="gone"/>

    <Button
        android:id="@+id/continuebutton"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_sign_in"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textColor="@color/ef_white"
        android:text="@string/continue_trip"
        android:visibility="visible"/>



</LinearLayout>